test/spec_vectors/elem/ok/module_16.wat
(module (import "spectest" "table" (table 0 funcref)) (elem (i32.const 0)))